# slop-farm

./: .gitignore  AGENT-SAFETY.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HUMANS.md  README.md  STRICT_PR_REVIEW.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: frozen-header.yml  pr-safety-lint.yml
scripts/: pr_safety_lint.py
src/slop_farm/: __init__.py  cli.py
tests/: test_cli.py
tools/memory-health/: README.md  memory-health.example.json  memory_health.py
tools/proposal-pile/: README.md  proposal_pile.py  proposals.jsonl  test_proposal_pile.py
tools/receipt-log/: README.md  receipt_log.py  receipts.jsonl  test_receipt_log.py
tools/receipt-log/viewer/: README.md  build.py  timeline.html
